# Robot-Hand-Tracking-ROS2

./: .gitignore  README.md
common/RealSense_Utilities/: README.md  object_detection.py  opencv_stream_v3.py  test.py
common/RealSense_Utilities/MATLAB/: depth_options.txt  get_options_from_rosbag.m  imu_options.txt  rgb_options.txt
common/RealSense_Utilities/realsense_api/: __init__.py  d405.json  d455.json  realsense_api.py
common/RealSense_Utilities/realsense_api/post_processing/: hole_filling.py  (+4 more)
common/mediapipe_api/handlandmarks/: handlandmark_keypoints.json  handlandmarks.py  mediapipe_hands_realsense_demo_legacy.py  test.py
scripts/: handlandmarks_show_plot.py  handlandmarks_with_realsense.py  main.py  main_legacy.py  tcp_client2.py  tcp_config.json  tcp_server.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: HandLandmarks.msg  HandLandmarksMultiArray.msg
src/handpose_pkg/: package.xml  setup.cfg  setup.py
src/handpose_pkg/doosan robot code/: visual_servoing_DY.py
src/handpose_pkg/handpose_pkg/: D455_preset_default.json  d405.json  demo.py  handpose3Dshow.py  handpose_indexfinger_publisher.py  mediapipe_hands.py  mediapipe_hands_3D_realsense_demo.py  mediapipe_hands_legacy.py  realsense_demo_coordinate_v2.py
src/handpose_pkg/handpose_pkg/RealSense_Utilities/: .gitignore  opencv_stream.py  opencv_stream_test.py  opencv_stream_v2.py
src/handpose_pkg/handpose_pkg/RealSense_Utilities/realsense_api/: realsense_api.py
src/handpose_pkg/handpose_pkg/RealSense_Utilities/realsense_api/post_processing/: decimation.py
